[workspace]
members = [
    "seastar-core",
    "seastar-net",
    "seastar-http",
    "seastar-rpc", 
    "seastar-util",
    "seastar-testing",
    "seastar-config",
    "seastar-distributed",
    "seastar-tests",
    "examples"
]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Seastar-RS Contributors"]
edition = "2021"
rust-version = "1.70"
license = "Apache-2.0"
repository = "https://github.com/seastar-rs/seastar-rs"
homepage = "https://seastar-rs.github.io"
description = "High-performance async framework for Rust, inspired by Seastar C++"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.0"
memmap2 = "0.9"
libc = "0.2"
parking_lot = "0.12"
crossbeam = "0.8"
once_cell = "1.0"
pin-project-lite = "0.2"

# Optional dependencies
mio = { version = "0.8", features = ["os-poll", "net"] }
socket2 = "0.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "5.0"
bincode = "1.0"
ring = "0.17"
rand = "0.8"