[package]
name = "seastar-config"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Configuration management for Seastar-RS applications"

[dependencies]
seastar-core = { path = "../seastar-core" }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
toml = "0.8"
thiserror.workspace = true
tracing.workspace = true
clap = { version = "4.0", features = ["derive", "env"] }
dirs = "5.0"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.0"