[package]
name = "seastar-rpc"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "RPC framework for Seastar-RS"

[dependencies]
seastar-core = { path = "../seastar-core" }
seastar-net = { path = "../seastar-net" }
seastar-util = { path = "../seastar-util" }
futures.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
socket2.workspace = true
bincode = "1.3"
rmp-serde = "1.1"
flate2 = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }