[package]
name = "seastar-testing"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Testing utilities for Seastar-RS"

[dependencies]
seastar-core = { path = "../seastar-core" }
seastar-util = { path = "../seastar-util" }
seastar-config = { path = "../seastar-config" }
futures.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["time", "sync", "process", "rt", "fs"] }
rand = "0.8"
criterion = "0.5"
proptest = "1.0"
quickcheck = "1.0"
tempfile = "3.0"
once_cell.workspace = true
parking_lot.workspace = true
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }