[package]
name = "seastar-util"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Utilities and common types for Seastar-RS"

[dependencies]
futures.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
parking_lot.workspace = true
crossbeam.workspace = true
once_cell.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }